--- a/bin/DashboardAdmin.fxml
+++ b/bin/DashboardAdmin.fxml
@@ -4,8 +4,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -21,19 +24,42 @@
          <Insets bottom="20.0" top="20.0" />
       </padding>
    </Label>
-   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+   <HBox alignment="CENTER" minHeight="500.0" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
       <children>
-         <TableView fx:id="citationTable" minHeight="454.0" prefHeight="454.0" prefWidth="1049.0">
-           <columns>
-             <TableColumn fx:id="dateIssuedColumn" prefWidth="196.0" text="Date Issued" />
-             <TableColumn fx:id="typeColumn" prefWidth="262.0" text="Type" />
-               <TableColumn fx:id="issuedByColumn" prefWidth="75.0" text="Issued By" />
-               <TableColumn fx:id="citationIdColumn" prefWidth="75.0" text="Citation ID" />
-           </columns>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-         </TableView>
+         <TabPane prefHeight="500.0" prefWidth="1051.0" tabClosingPolicy="UNAVAILABLE">
+           <tabs>
+             <Tab text="Citations">
+               <content>
+                 <AnchorPane minHeight="0.0" minWidth="0.0">
+                        <children>
+                           <TableView fx:id="citationTable" prefHeight="468.0" prefWidth="1051.0">
+                             <columns>
+                                 <TableColumn fx:id="citationIdColumn" prefWidth="75.0" text="Citation ID" />
+                               <TableColumn fx:id="dateIssuedColumn" prefWidth="196.0" text="Date Issued" />
+                                 <TableColumn fx:id="issuedByColumn" prefWidth="75.0" text="Issued By" />
+                               <TableColumn fx:id="typeColumn" prefWidth="262.0" text="Type" />
+                                 <TableColumn fx:id="paymentStatusColumn" prefWidth="262.0" text="Payment Status" />
+                             </columns>
+                              <columnResizePolicy>
+                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                              </columnResizePolicy>
+                           </TableView>
+                        </children>
+                     </AnchorPane>
+               </content>
+             </Tab>
+             <Tab text="Drivers">
+               <content>
+                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
+             </Tab>
+               <Tab text="Vehicles">
+                  <content>
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+               </Tab>
+           </tabs>
+         </TabPane>
       </children>
    </HBox>
    <Button fx:id="refreshButton" onAction="#handleRefreshButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Refresh" textFill="WHITE">
