--- a/bin/DashboardAdmin.fxml
+++ b/bin/DashboardAdmin.fxml
@@ -24,15 +24,15 @@
          <Insets bottom="20.0" top="20.0" />
       </padding>
    </Label>
-   <HBox alignment="CENTER" minHeight="500.0" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+   <HBox alignment="CENTER" minHeight="400.0" prefHeight="451.0" prefWidth="1080.0" spacing="100.0">
       <children>
          <TabPane prefHeight="500.0" prefWidth="1051.0" tabClosingPolicy="UNAVAILABLE">
            <tabs>
              <Tab text="Citations">
                <content>
-                 <AnchorPane minHeight="0.0" minWidth="0.0">
+                 <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="1051.0">
                         <children>
-                           <TableView fx:id="citationTable" prefHeight="468.0" prefWidth="1051.0">
+                           <TableView fx:id="citationTable" prefHeight="418.0" prefWidth="1051.0">
                              <columns>
                                  <TableColumn fx:id="citationIdColumn" prefWidth="75.0" text="Citation ID" />
                                <TableColumn fx:id="dateIssuedColumn" prefWidth="196.0" text="Date Issued" />
