--- a/src/DashboardLocal.fxml
+++ b/src/DashboardLocal.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DashboardAdminController">
+<VBox alignment="TOP_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="480.0" prefWidth="720.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DashboardLocalController">
    <ComboBox fx:id="itemTypeComboBox" prefWidth="150.0" promptText="Create New" />
 
                 <Label alignment="TOP_LEFT" text="Welcome [username]">
@@ -24,15 +24,15 @@
          <Insets bottom="20.0" top="20.0" />
       </padding>
    </Label>
-   <HBox alignment="CENTER" minHeight="400.0" prefHeight="451.0" prefWidth="1080.0" spacing="100.0">
+   <HBox alignment="CENTER" spacing="100.0">
       <children>
-         <TabPane prefHeight="500.0" prefWidth="1051.0" tabClosingPolicy="UNAVAILABLE">
+         <TabPane prefHeight="224.0" prefWidth="709.0" tabClosingPolicy="UNAVAILABLE">
            <tabs>
              <Tab text="Citations">
                <content>
-                 <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="1051.0">
+                 <AnchorPane minHeight="0.0" minWidth="0.0">
                         <children>
-                           <TableView fx:id="citationTable" prefHeight="418.0" prefWidth="1051.0">
+                           <TableView fx:id="citationTable" prefHeight="193.0" prefWidth="709.0">
                              <columns>
                                  <TableColumn fx:id="citationIdColumn" prefWidth="75.0" text="Citation ID" />
                                <TableColumn fx:id="dateIssuedColumn" prefWidth="196.0" text="Date Issued" />
@@ -68,7 +68,7 @@
       </font>
    </Button>
    <padding>
-      <Insets top="100.0" />
+      <Insets top="60.0" />
    </padding>
 
 </VBox>
