--- a/bin/DashboardLocal.fxml
+++ b/bin/DashboardLocal.fxml
@@ -55,7 +55,21 @@
              </Tab>
                <Tab text="Vehicles">
                   <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <children>
+                           <TableView fx:id="vehicleTable" prefHeight="193.0" prefWidth="709.0">
+                              <columns>
+                                 <TableColumn fx:id="makeColumn" prefWidth="75.0" text="Make" />
+                                 <TableColumn fx:id="modelColumn" prefWidth="196.0" text="Model" />
+                                 <TableColumn fx:id="yearColumn" prefWidth="75.0" text="Year" />
+                                 <TableColumn fx:id="vINColumn" prefWidth="262.0" text="VIN" />
+                                 <TableColumn fx:id="registrationStatusColumn" prefWidth="262.0" text="Registration Status" />
+                              </columns>
+                              <columnResizePolicy>
+                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                              </columnResizePolicy>
+                           </TableView>
+                        </children></AnchorPane>
                   </content>
                </Tab>
            </tabs>
