--- a/bin/ModifyCitation.fxml
+++ b/bin/ModifyCitation.fxml
@@ -13,56 +13,65 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ModifyCitationController">
+<VBox alignment="TOP_CENTER" maxHeight="480.0" maxWidth="720.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ModifyCitationController">
 
                 <Label alignment="TOP_LEFT" text="Details">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
       <padding>
-         <Insets bottom="20.0" top="20.0" />
+         <Insets top="10.0" />
       </padding>
    </Label>
-   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
       <children>
-         <VBox spacing="5.0">
+         <VBox prefHeight="436.0" prefWidth="422.0">
             <children>
                <Label text="Citation ID">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <Label fx:id="citationIdLabel" text="0000001">
                   <font>
-                     <Font name="Arial" size="16.0" />
+                     <Font name="Arial" size="14.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <Label text="Date &amp; Time">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <Label fx:id="dateTimeLabel" text="2000-01-01   01:01:01">
                   <font>
-                     <Font name="Arial" size="16.0" />
+                     <Font name="Arial" size="14.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <Label text="Type">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <StackPane prefHeight="25.0" prefWidth="300.0">
                   <children>
                      <Label fx:id="typeLabel" prefHeight="25.0" prefWidth="300.0" text="Citation Type">
                         <font>
-                           <Font name="Arial" size="16.0" />
+                           <Font name="Arial" size="14.0" />
                         </font>
                         <StackPane.margin>
                            <Insets top="10.0" />
@@ -71,122 +80,134 @@
                      <ComboBox fx:id="typeComboBox" prefHeight="25.0" prefWidth="300.0" promptText="Select Citation Type" />
                   </children>
                   <VBox.margin>
-                     <Insets bottom="30.0" left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </StackPane>
                <Label text="Driver's License Number">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <HBox prefHeight="100.0" prefWidth="200.0">
                   <children>
                      <TextField fx:id="driverLicenseNumberTextField" prefWidth="300.0" promptText="1234-1234-1234-1234">
                         <font>
-                           <Font size="16.0" />
+                           <Font size="14.0" />
                         </font>
                      </TextField>
                   </children>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </HBox>
                <Label fx:id="driverLicenseNumberErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
-                     <Font name="Arial" size="16.0" />
+                     <Font name="Arial" size="14.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </Label>
                <Label text="License Plate Number">
                   <font>
-                     <Font name="Arial" size="18.0" />
-                  </font>
-               </Label>
-               <TextField fx:id="licensePlateNumberTextField" promptText="BPZK 686">
-                  <font>
-                     <Font size="16.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
+                  </VBox.margin>
+               </Label>
+               <TextField fx:id="licensePlateNumberTextField" prefWidth="300.0" promptText="BPZK 686">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets />
                   </VBox.margin>
                </TextField>
                <Label fx:id="licensePlateNumberErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
-                     <Font name="Arial" size="16.0" />
+                     <Font name="Arial" size="14.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </Label>
                <Label text="Vehicle Identification Number">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <TextField fx:id="vehicleIdTextField" promptText="2T2K1E56A12345674">
                   <font>
-                     <Font size="16.0" />
+                     <Font size="14.0" />
                   </font>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </TextField>
                <Label fx:id="vehicleIdErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
-                     <Font name="Arial" size="16.0" />
+                     <Font name="Arial" size="14.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </Label>
                <Label text="Fine Amount">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <TextField fx:id="fineAmountTextArea" promptText="000000.00">
                   <font>
-                     <Font size="16.0" />
+                     <Font size="14.0" />
                   </font>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </TextField>
                <Label fx:id="fineAmountErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
-                  <padding>
-                     <Insets bottom="5.0" />
-                  </padding>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                <Label fx:id="trafficSchoolLabel" text="Traffic School" visible="false">
                   <font>
-                     <Font name="Arial" size="18.0" />
+                     <Font name="Arial" size="16.0" />
                   </font>
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
                </Label>
                 <Button fx:id="bookButton" onAction="#handleBookButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Book" textFill="WHITE" visible="false">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
                   <VBox.margin>
-                     <Insets left="10.0" />
+                     <Insets />
                   </VBox.margin>
                </Button>
             </children>
+            <HBox.margin>
+               <Insets />
+            </HBox.margin>
+            <padding>
+               <Insets left="10.0" right="30.0" />
+            </padding>
          </VBox>
-         <VBox alignment="BOTTOM_LEFT" spacing="10.0">
+         <VBox alignment="BOTTOM_LEFT">
             <children>
                <Label text="Issuing Officer">
                   <font>
@@ -195,7 +216,7 @@
                </Label>
                <TextField fx:id="officerTextArea" maxWidth="300.0" prefWidth="300.0" promptText="Firstname Lastname">
                   <font>
-                     <Font size="16.0" />
+                     <Font size="14.0" />
                   </font>
                   <VBox.margin>
                      <Insets />
@@ -221,7 +242,7 @@
                   <children>
                      <RadioButton fx:id="paidRadioButton" mnemonicParsing="false" text="Paid">
                         <font>
-                           <Font name="Arial" size="16.0" />
+                           <Font name="Arial" size="14.0" />
                         </font>
                         <toggleGroup>
                            <ToggleGroup fx:id="PaymentStatus" />
@@ -229,7 +250,7 @@
                      </RadioButton>
                      <RadioButton fx:id="unpaidRadioButton" mnemonicParsing="false" selected="true" text="Unpaid" toggleGroup="$PaymentStatus">
                         <font>
-                           <Font name="Arial" size="16.0" />
+                           <Font name="Arial" size="14.0" />
                         </font>
                      </RadioButton>
                   </children>
@@ -244,37 +265,46 @@
                </Label>
                <TextArea fx:id="notesTextArea" prefHeight="275.0" prefWidth="500.0">
                   <font>
-                     <Font name="Arial" size="16.0" />
-                  </font></TextArea>
+                     <Font name="Arial" size="14.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets bottom="5.0" />
+                  </VBox.margin></TextArea>
                <HBox alignment="TOP_RIGHT" spacing="20.0">
                   <children>
                      <Button fx:id="cancelButton" onAction="#handleCancelButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Cancel" textFill="WHITE">
                         <font>
-                           <Font size="16.0" />
+                           <Font size="14.0" />
                         </font>
                      </Button>
                      <Button fx:id="deleteButton" onAction="#handleDeleteButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Delete" textFill="WHITE">
                         <font>
-                           <Font size="16.0" />
+                           <Font size="14.0" />
                         </font>
                      </Button>
                      <StackPane>
                         <children>
                            <Button fx:id="applyButton" onAction="#handleApplyButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Apply" textFill="WHITE">
                               <font>
-                                 <Font size="16.0" />
+                                 <Font name="Arial" size="14.0" />
                               </font>
                            </Button>
                            <Button fx:id="modifyButton" onAction="#handleModifyButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Modify" textFill="WHITE">
                               <font>
-                                 <Font size="16.0" />
+                                 <Font name="Arial" size="14.0" />
                               </font>
                            </Button>
                         </children>
                      </StackPane>
                   </children>
+                  <VBox.margin>
+                     <Insets bottom="5.0" />
+                  </VBox.margin>
                </HBox>
             </children>
+            <padding>
+               <Insets right="10.0" />
+            </padding>
          </VBox>
       </children>
    </HBox>
