--- a/bin/NewVehicle.fxml
+++ b/bin/NewVehicle.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -11,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="480.0" maxWidth="720.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="NewCitationController">
+<VBox alignment="TOP_CENTER" maxHeight="480.0" maxWidth="720.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="NewVehicleController">
 
-                <Label alignment="TOP_LEFT" text="New Citation">
+                <Label alignment="TOP_LEFT" text="New Vehicle">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
@@ -21,46 +20,21 @@
          <Insets top="20.0" />
       </padding>
    </Label>
-   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+   <HBox alignment="CENTER" prefHeight="413.0" prefWidth="720.0" spacing="10.0">
       <children>
          <VBox prefWidth="288.0">
             <children>
-               <Label text="Citation ID">
+               <Label fx:id="dateTimeLabel" prefHeight="41.0" prefWidth="137.0" text="Vehicle Information">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
                </Label>
-               <Label fx:id="citationIdLabel" text="0000001">
-                  <font>
-                     <Font name="Arial" size="14.0" />
-                  </font>
-               </Label>
-               <Label text="Date &amp; Time">
+               <Label text="Vehicle Make">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
                </Label>
-               <Label fx:id="dateTimeLabel" text="2000-01-01   01:01:01">
-                  <font>
-                     <Font name="Arial" size="14.0" />
-                  </font>
-               </Label>
-               <Label text="Type">
-                  <font>
-                     <Font name="Arial" size="16.0" />
-                  </font>
-               </Label>
-               <ComboBox fx:id="typeComboBox" prefHeight="25.0" prefWidth="300.0" promptText="Select Citation Type">
-                  <VBox.margin>
-                     <Insets bottom="15.0" left="10.0" />
-                  </VBox.margin>
-               </ComboBox>
-               <Label text="Driver's License Number">
-                  <font>
-                     <Font name="Arial" size="16.0" />
-                  </font>
-               </Label>
-               <TextField fx:id="driverLicenseNumberTextField" promptText="1234-1234-1234-1234">
+               <TextField fx:id="makeTextField" promptText="Toyota">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
@@ -68,7 +42,7 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </TextField>
-               <Label fx:id="driverLicenseNumberErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
+               <Label fx:id="makeErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
@@ -76,12 +50,12 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </Label>
-               <Label text="License Plate Number">
+               <Label text="Vehicle Model">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
                </Label>
-               <TextField fx:id="licensePlateNumberTextField" promptText="BPZK 686">
+               <TextField fx:id="modelTextField" promptText="Camry">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
@@ -89,20 +63,38 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </TextField>
-               <Label fx:id="licensePlateNumberErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
+               <Label fx:id="modelErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
                   <VBox.margin>
                      <Insets left="10.0" />
                   </VBox.margin>
+               </Label>
+               <Label text="Vehicle Year">
+                  <font>
+                     <Font name="Arial" size="16.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="yearTextField" promptText="2021">
+                  <font>
+                     <Font name="Arial" size="14.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets left="10.0" />
+                  </VBox.margin>
+               </TextField>
+               <Label fx:id="yearErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
+                  <font>
+                     <Font name="Arial" size="14.0" />
+                  </font>
                </Label>
                <Label text="Vehicle Identification Number">
                   <font>
                      <Font name="Arial" size="16.0" />
                   </font>
                </Label>
-               <TextField fx:id="vehicleIdTextField" promptText="2T2K1E56A12345674">
+               <TextField fx:id="vinTextField" promptText="2T2K1E56A12345674">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
@@ -110,7 +102,7 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </TextField>
-               <Label fx:id="vehicleIdErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
+               <Label fx:id="vinErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
                   <font>
                      <Font name="Arial" size="14.0" />
                   </font>
@@ -118,37 +110,6 @@
                      <Insets left="10.0" />
                   </VBox.margin>
                </Label>
-               <Label text="Fine Amount">
-                  <font>
-                     <Font name="Arial" size="16.0" />
-                  </font>
-               </Label>
-               <TextField fx:id="fineAmountTextArea" promptText="000000.00">
-                  <font>
-                     <Font name="Arial" size="14.0" />
-                  </font>
-                  <VBox.margin>
-                     <Insets left="10.0" />
-                  </VBox.margin>
-               </TextField>
-               <Label fx:id="fineAmountErrorLabel" text="*Invalid Input" textFill="RED" visible="false">
-                  <font>
-                     <Font name="Arial" size="14.0" />
-                  </font>
-               </Label>
-               <Label fx:id="trafficSchoolLabel" text="Traffic School" visible="false">
-                  <font>
-                     <Font name="Arial" size="18.0" />
-                  </font>
-               </Label>
-                <Button fx:id="bookButton" onAction="#handleBookButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Book" textFill="WHITE" visible="false">
-                  <font>
-                     <Font name="Arial" size="14.0" />
-                  </font>
-                  <VBox.margin>
-                     <Insets left="10.0" />
-                  </VBox.margin>
-               </Button>
             </children>
          </VBox>
          <VBox alignment="BOTTOM_LEFT" prefHeight="552.0" prefWidth="405.0">
