--- a/bin/TrafficSchool.fxml
+++ b/bin/TrafficSchool.fxml
@@ -10,15 +10,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TrafficSchoolController">
+<VBox alignment="TOP_CENTER" maxHeight="480.0" maxWidth="720.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TrafficSchoolController">
 
                 <Label alignment="TOP_LEFT" text="Traffic School Scheduling">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
-      <padding>
-         <Insets bottom="20.0" top="20.0" />
-      </padding>
    </Label>
    <HBox alignment="CENTER" spacing="100.0">
       <children>
@@ -26,11 +23,11 @@
             <children>
                <HBox alignment="TOP_RIGHT">
                   <children>
-                     <VBox prefHeight="306.0" prefWidth="737.0" spacing="10.0">
+                     <VBox prefHeight="306.0" prefWidth="737.0">
                         <children>
                            <Label text="Offender's Information">
                               <font>
-                                 <Font name="Arial" size="20.0" />
+                                 <Font name="Arial" size="16.0" />
                               </font>
                               <padding>
                                  <Insets bottom="10.0" />
@@ -42,12 +39,12 @@
                                     <children>
                                        <Label text="First Name">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="16.0" />
                                           </font>
                                        </Label>
                                        <Label fx:id="firstNameLabel" prefWidth="275.0" text="firstName">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                           <VBox.margin>
                                              <Insets bottom="5.0" left="10.0" />
@@ -59,12 +56,12 @@
                                     <children>
                                        <Label text="Last Name">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="16.0" />
                                           </font>
                                        </Label>
                                        <Label fx:id="lastNameLabel" prefWidth="275.0" text="lastName">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                           <VBox.margin>
                                              <Insets bottom="5.0" left="10.0" />
@@ -76,12 +73,12 @@
                                     <children>
                                        <Label prefWidth="280.0" text="Driver's License Number">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="16.0" />
                                           </font>
                                        </Label>
                                        <Label fx:id="dLNumberLabel" text="1234-1234-1234-1234">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                           <VBox.margin>
                                              <Insets bottom="5.0" left="10.0" />
@@ -93,7 +90,7 @@
                            </HBox>
                            <Label text="Session Appointment">
                               <font>
-                                 <Font name="Arial" size="20.0" />
+                                 <Font name="Arial" size="16.0" />
                               </font>
                               <VBox.margin>
                                  <Insets bottom="5.0" top="10.0" />
@@ -105,7 +102,7 @@
                                     <children>
                                        <Label text="Session Date">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                        </Label>
                                        <DatePicker fx:id="sessionDatePicker0" editable="false" prefWidth="243.0">
@@ -119,7 +116,7 @@
                                     <children>
                                        <Label text="Session Duration">
                                           <font>
-                                             <Font name="Arial" size="18.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                        </Label>
                                        <TextField fx:id="sessionDurationTextField0" promptText="0.00">
@@ -129,7 +126,7 @@
                                        </TextField>
                                        <Label fx:id="sessionErrorLabel0" text="*Input Invalid" textFill="RED">
                                           <font>
-                                             <Font name="Arial" size="16.0" />
+                                             <Font name="Arial" size="14.0" />
                                           </font>
                                           <VBox.margin>
                                              <Insets left="10.0" />
@@ -137,7 +134,7 @@
                                        </Label>
                                     </children>
                                     <HBox.margin>
-                                       <Insets left="100.0" />
+                                       <Insets left="10.0" />
                                     </HBox.margin>
                                  </VBox>
                               </children>
@@ -150,7 +147,7 @@
                                           <children>
                                              <Label text="Session Date">
                                                 <font>
-                                                   <Font name="Arial" size="18.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                              </Label>
                                              <DatePicker fx:id="sessionDatePicker1" editable="false" prefWidth="243.0">
@@ -164,7 +161,7 @@
                                           <children>
                                              <Label text="Session Duration">
                                                 <font>
-                                                   <Font name="Arial" size="18.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                              </Label>
                                              <TextField fx:id="sessionDurationTextField1" promptText="0.00">
@@ -174,7 +171,7 @@
                                              </TextField>
                                              <Label fx:id="sessionErrorLabel1" text="*Input Invalid" textFill="RED">
                                                 <font>
-                                                   <Font name="Arial" size="16.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                                 <VBox.margin>
                                                    <Insets left="10.0" />
@@ -182,17 +179,17 @@
                                              </Label>
                                           </children>
                                           <HBox.margin>
-                                             <Insets left="100.0" />
+                                             <Insets left="10.0" />
                                           </HBox.margin>
                                        </VBox>
                                     </children>
                                  </HBox>
                                  <Button fx:id="sessionAddButton1" onAction="#handleSessionAddButton1" prefHeight="35.0" prefWidth="98.0" style="-fx-background-color: #0a3bff;" text="Add" textFill="WHITE">
                                     <font>
-                                       <Font size="16.0" />
+                                       <Font size="14.0" />
                                     </font>
                                     <HBox.margin>
-                                       <Insets left="100.0" />
+                                       <Insets left="10.0" />
                                     </HBox.margin>
                                  </Button>
                               </children>
@@ -205,7 +202,7 @@
                                           <children>
                                              <Label text="Session Date">
                                                 <font>
-                                                   <Font name="Arial" size="18.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                              </Label>
                                              <DatePicker fx:id="sessionDatePicker2" editable="false" prefWidth="243.0">
@@ -219,7 +216,7 @@
                                           <children>
                                              <Label text="Session Duration">
                                                 <font>
-                                                   <Font name="Arial" size="18.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                              </Label>
                                              <TextField fx:id="sessionDurationTextField2" promptText="0.00">
@@ -229,7 +226,7 @@
                                              </TextField>
                                              <Label fx:id="sessionErrorLabel2" text="*Input Invalid" textFill="RED">
                                                 <font>
-                                                   <Font name="Arial" size="16.0" />
+                                                   <Font name="Arial" size="14.0" />
                                                 </font>
                                                 <VBox.margin>
                                                    <Insets left="10.0" />
@@ -237,24 +234,24 @@
                                              </Label>
                                           </children>
                                           <HBox.margin>
-                                             <Insets left="100.0" />
+                                             <Insets left="10.0" />
                                           </HBox.margin>
                                        </VBox>
                                     </children>
                                  </HBox>
                                  <Button fx:id="sessionAddButton2" onAction="#handleSessionAddButton2" prefHeight="35.0" prefWidth="98.0" style="-fx-background-color: #0a3bff;" text="Add" textFill="WHITE">
                                     <font>
-                                       <Font size="16.0" />
+                                       <Font size="14.0" />
                                     </font>
                                     <HBox.margin>
-                                       <Insets left="100.0" />
+                                       <Insets left="10.0" />
                                     </HBox.margin>
                                  </Button>
                               </children>
                            </HBox>
                         </children>
                         <HBox.margin>
-                           <Insets />
+                           <Insets left="10.0" right="10.0" />
                         </HBox.margin>
                      </VBox>
                   </children>
@@ -267,7 +264,7 @@
       <children>
          <Label text="Report Notes">
             <font>
-               <Font name="Arial" size="20.0" />
+               <Font name="Arial" size="16.0" />
             </font>
          </Label>
          <TextArea fx:id="reportNotes" prefHeight="200.0" prefWidth="880.0" />
@@ -280,26 +277,26 @@
       <children>
          <Label fx:id="submitErrorLabel" text="*Session duration must meet 8 hour requirement" textFill="RED">
             <font>
-               <Font name="Arial" size="18.0" />
+               <Font name="Arial" size="14.0" />
             </font>
          </Label>
          <Button fx:id="cancelButton" onAction="#handleCancelButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Cancel" textFill="WHITE">
             <font>
-               <Font size="16.0" />
+               <Font size="14.0" />
             </font>
          </Button>
          <Button fx:id="SubmitButton" onAction="#handleSubmitButton" prefWidth="100.0" style="-fx-background-color: #0a3bff;" text="Submit" textFill="WHITE">
             <font>
-               <Font size="16.0" />
+               <Font size="14.0" />
             </font>
          </Button>
       </children>
       <padding>
-         <Insets right="100.0" />
+         <Insets bottom="10.0" right="100.0" />
       </padding>
    </HBox>
    <padding>
-      <Insets top="50.0" />
+      <Insets top="10.0" />
    </padding>
 
 </VBox>
