--- a/n-tcrs/src/main/resources/tcrs/dashboardProvincial.fxml
+++ b/n-tcrs/src/main/resources/tcrs/dashboardProvincial.fxml
@@ -1,6 +1,5 @@
-//Author David.G
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--Author David.G-->
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
