--- a/n-tcrs/src/main/resources/tcrs/reportProvincial.fxml
+++ b/n-tcrs/src/main/resources/tcrs/reportProvincial.fxml
@@ -24,6 +24,11 @@
             </Label>
             <ButtonBar buttonMinWidth="80.0" prefHeight="40.0" prefWidth="430.0" style="-fx-background-color: #3333ff;">
               <buttons>
+                 <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="60.0" text="Provincial" textAlignment="CENTER" textFill="WHITE">
+                    <font>
+                       <Font size="13.0" />
+                    </font>
+                 </Label>
                   <Button alignment="CENTER" mnemonicParsing="false" onAction="#switchToSearch" prefHeight="38.0" prefWidth="100.0" styleClass="nav-btn-class" stylesheets="@styling.css" text="Search" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Helvetica" size="13.0" />
